--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,8 @@ dependencies:
   cloud_firestore: ^0.13.0+1
   provider: ^4.0.1
   firebase_auth: ^0.15.3+1
-  stripe_payment: ^1.0.3
+  flutter_credit_card: ^0.1.3
+
 
 
   # The following adds the Cupertino Icons font to your application.
