--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   provider: ^4.0.1
   firebase_auth: ^0.15.3+1
   flutter_credit_card: ^0.1.3
+  dio: ^3.0.8
+  http: ^0.12.0+4
 
 
 
